--- a/idhm_presidentes.ipynb
+++ b/idhm_presidentes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFm8p1C667dZS1I8dbwW+2",
+      "authorship_tag": "ABX9TyOUe0FQRcFkKbj9U+DAhogr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,48 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hGIZ52IXZXHf",
-        "outputId": "dd1e171f-b696-4a51-fe46-b0c154269a11"
+        "id": "hGIZ52IXZXHf"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m51.0/51.0 KB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m70.9/70.9 KB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m20.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.6/133.6 KB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m135.2/135.2 KB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 KB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m97.5/97.5 KB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m25.6/25.6 MB\u001b[0m \u001b[31m31.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m106.0/106.0 KB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m108.4/108.4 KB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m204.0/204.0 KB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m120.2/120.2 KB\u001b[0m \u001b[31m12.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m555.3/555.3 KB\u001b[0m \u001b[31m45.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/2.6 MB\u001b[0m \u001b[31m72.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Building wheel for ckanapi (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for pandavro (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for docopt (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "notebook 5.7.16 requires jinja2<=3.0.0, but you have jinja2 3.0.3 which is incompatible.\n",
-            "flask 1.1.4 requires click<8.0,>=5.1, but you have click 8.0.3 which is incompatible.\n",
-            "flask 1.1.4 requires Jinja2<3.0,>=2.10.1, but you have jinja2 3.0.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "# IN PROGRESS\n",
         "pip install basedosdados -q"
       ]
     },
@@ -81,33 +46,43 @@
       "metadata": {
         "id": "c3JIuRJoZyUu"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "import basedosdados as bd\n",
-        "\n",
-        "# Para carregar o dado direto no pandas\n",
-        "df = bd.read_table(dataset_id='br_me_cnpj',\n",
-        "table_id='dicionario',\n",
-        "billing_project_id=\"teste-projeto-bd\")"
+        "#Lendo/Acessando o df. a partir do SQL e pacote da Base dos Dados para 2018 no 2º Turno\n",
+        "query = '''\n",
+        "SELECT \n",
+        "  a.sigla_partido,\n",
+        "  a.id_municipio, \n",
+        "  sum(a.votos) AS total_votos\n",
+        "FROM \n",
+        "  `basedosdados.br_tse_eleicoes.resultados_candidato_municipio` a\n",
+        "INNER JOIN `basedosdados.mundo_onu_adh.municipio` b \n",
+        "ON a.id_municipio = b.id_municipio\n",
+        "WHERE \n",
+        "  a.ano = 2018 AND cargo = 'presidente' AND turno = 2 AND sigla_uf = 'SP'\n",
+        "GROUP BY \n",
+        "  sigla_partido, id_municipio\n",
+        "'''\n",
+        "df = bd.read_sql(query, billing_project_id='teste-projeto-bd')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Y9aFIihmZ0sd",
-        "outputId": "c714e308-545c-41ac-8d01-651a6a9cd9b5"
+        "id": "4NGdPKO_aQ4l",
+        "outputId": "978b74b1-658a-4059-fac1-54f620dc2b85"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Downloading: 100%|██████████| 289/289 [00:00<00:00, 743.17rows/s]\n"
+            "Downloading: 100%|██████████| 1290/1290 [00:00<00:00, 7633.83rows/s]\n"
           ]
         }
       ]
@@ -115,54 +90,57 @@
     {
       "cell_type": "code",
       "source": [
-        "query = \n",
-        "'''\n"
+        "#Calculando Porcentagem de votação cada municipio \n",
+        "def calculate_percent(group):\n",
+        "    total_votes = group['total_votos'].sum()\n",
+        "    group['percent'] = group['total_votos'] / total_votes * 100\n",
+        "    return group\n",
+        "\n",
+        "df = df.groupby('id_municipio').apply(calculate_percent)"
+      ],
+      "metadata": {
+        "id": "k1Mbmz3IwODC"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "id": "4NGdPKO_aQ4l",
-        "outputId": "c4bc684f-7bac-42f6-e6ad-30e3d046f9a3"
+        "id": "qcWnpb5ewyOp",
+        "outputId": "277b30b7-3af1-4f2f-8fe7-81ea74e13b63"
       },
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "            id_tabela                nome_coluna chave cobertura_temporal  \\\n",
-              "0              socios                       tipo     1                (1)   \n",
-              "1              socios                       tipo     2                (1)   \n",
-              "2              socios                       tipo     3                (1)   \n",
-              "3              socios               qualificacao     0                (1)   \n",
-              "4              socios               qualificacao     5                (1)   \n",
-              "..                ...                        ...   ...                ...   \n",
-              "284  estabelecimentos  motivo_situacao_cadastral    73                (1)   \n",
-              "285  estabelecimentos  motivo_situacao_cadastral    74                (1)   \n",
-              "286  estabelecimentos  motivo_situacao_cadastral    75                (1)   \n",
-              "287  estabelecimentos  motivo_situacao_cadastral    80                (1)   \n",
-              "288  estabelecimentos  motivo_situacao_cadastral    82                (1)   \n",
+              "     sigla_partido id_municipio  total_votos    percent\n",
+              "0               PT      3500105         9468  17.298838\n",
+              "1              PSL      3500105        45264  82.701162\n",
+              "2               PT      3500204         1983   24.46336\n",
+              "3              PSL      3500204         6123   75.53664\n",
+              "4               PT      3500303        13005  28.708609\n",
+              "...            ...          ...          ...        ...\n",
+              "1285           PSL      3557154         3396  71.239773\n",
+              "1286            PT      3557204         5214  27.635554\n",
+              "1287           PSL      3557204        13653  72.364446\n",
+              "1288            PT      3557303         4185  23.031204\n",
+              "1289           PSL      3557303        13986  76.968796\n",
               "\n",
-              "                                                 valor  \n",
-              "0                                      Pessoa Jurídica  \n",
-              "1                                        Pessoa Física  \n",
-              "2                                          Estrangeiro  \n",
-              "3                                        Não informada  \n",
-              "4                                        Administrador  \n",
-              "..                                                 ...  \n",
-              "284                                   OMISSAO CONTUMAZ  \n",
-              "285                           INCONSISTENCIA CADASTRAL  \n",
-              "286                    OBITO DO MEI - TITULAR FALECIDO  \n",
-              "287       BAIXA REGISTRADA NA JUNTA, INDEFERIDA NA RFB  \n",
-              "288  SUSPENSO PERANTE A COMISSAO DE VALORES MOBILIA...  \n",
-              "\n",
-              "[289 rows x 5 columns]"
+              "[1290 rows x 4 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fdb99a01-31be-4bc2-a85f-14973578b0a5\">\n",
+              "  <div id=\"df-519b1502-bd4d-47b3-a8bc-5ed41aa26863\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -182,53 +160,47 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>id_tabela</th>\n",
-              "      <th>nome_coluna</th>\n",
-              "      <th>chave</th>\n",
-              "      <th>cobertura_temporal</th>\n",
-              "      <th>valor</th>\n",
+              "      <th>sigla_partido</th>\n",
+              "      <th>id_municipio</th>\n",
+              "      <th>total_votos</th>\n",
+              "      <th>percent</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>socios</td>\n",
-              "      <td>tipo</td>\n",
-              "      <td>1</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>Pessoa Jurídica</td>\n",
+              "      <td>PT</td>\n",
+              "      <td>3500105</td>\n",
+              "      <td>9468</td>\n",
+              "      <td>17.298838</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>socios</td>\n",
-              "      <td>tipo</td>\n",
-              "      <td>2</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>Pessoa Física</td>\n",
+              "      <td>PSL</td>\n",
+              "      <td>3500105</td>\n",
+              "      <td>45264</td>\n",
+              "      <td>82.701162</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>socios</td>\n",
-              "      <td>tipo</td>\n",
-              "      <td>3</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>Estrangeiro</td>\n",
+              "      <td>PT</td>\n",
+              "      <td>3500204</td>\n",
+              "      <td>1983</td>\n",
+              "      <td>24.46336</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>socios</td>\n",
-              "      <td>qualificacao</td>\n",
-              "      <td>0</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>Não informada</td>\n",
+              "      <td>PSL</td>\n",
+              "      <td>3500204</td>\n",
+              "      <td>6123</td>\n",
+              "      <td>75.53664</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>socios</td>\n",
-              "      <td>qualificacao</td>\n",
-              "      <td>5</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>Administrador</td>\n",
+              "      <td>PT</td>\n",
+              "      <td>3500303</td>\n",
+              "      <td>13005</td>\n",
+              "      <td>28.708609</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -236,53 +208,47 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
-              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>284</th>\n",
-              "      <td>estabelecimentos</td>\n",
-              "      <td>motivo_situacao_cadastral</td>\n",
-              "      <td>73</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>OMISSAO CONTUMAZ</td>\n",
+              "      <th>1285</th>\n",
+              "      <td>PSL</td>\n",
+              "      <td>3557154</td>\n",
+              "      <td>3396</td>\n",
+              "      <td>71.239773</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>285</th>\n",
-              "      <td>estabelecimentos</td>\n",
-              "      <td>motivo_situacao_cadastral</td>\n",
-              "      <td>74</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>INCONSISTENCIA CADASTRAL</td>\n",
+              "      <th>1286</th>\n",
+              "      <td>PT</td>\n",
+              "      <td>3557204</td>\n",
+              "      <td>5214</td>\n",
+              "      <td>27.635554</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>286</th>\n",
-              "      <td>estabelecimentos</td>\n",
-              "      <td>motivo_situacao_cadastral</td>\n",
-              "      <td>75</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>OBITO DO MEI - TITULAR FALECIDO</td>\n",
+              "      <th>1287</th>\n",
+              "      <td>PSL</td>\n",
+              "      <td>3557204</td>\n",
+              "      <td>13653</td>\n",
+              "      <td>72.364446</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>287</th>\n",
-              "      <td>estabelecimentos</td>\n",
-              "      <td>motivo_situacao_cadastral</td>\n",
-              "      <td>80</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>BAIXA REGISTRADA NA JUNTA, INDEFERIDA NA RFB</td>\n",
+              "      <th>1288</th>\n",
+              "      <td>PT</td>\n",
+              "      <td>3557303</td>\n",
+              "      <td>4185</td>\n",
+              "      <td>23.031204</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>288</th>\n",
-              "      <td>estabelecimentos</td>\n",
-              "      <td>motivo_situacao_cadastral</td>\n",
-              "      <td>82</td>\n",
-              "      <td>(1)</td>\n",
-              "      <td>SUSPENSO PERANTE A COMISSAO DE VALORES MOBILIA...</td>\n",
+              "      <th>1289</th>\n",
+              "      <td>PSL</td>\n",
+              "      <td>3557303</td>\n",
+              "      <td>13986</td>\n",
+              "      <td>76.968796</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>289 rows × 5 columns</p>\n",
+              "<p>1290 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fdb99a01-31be-4bc2-a85f-14973578b0a5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-519b1502-bd4d-47b3-a8bc-5ed41aa26863')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -333,12 +299,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fdb99a01-31be-4bc2-a85f-14973578b0a5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-519b1502-bd4d-47b3-a8bc-5ed41aa26863 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fdb99a01-31be-4bc2-a85f-14973578b0a5');\n",
+              "          const element = document.querySelector('#df-519b1502-bd4d-47b3-a8bc-5ed41aa26863');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -361,7 +327,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
         }
       ]
     }
