--- a/idhm_presidentes.ipynb
+++ b/idhm_presidentes.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUe0FQRcFkKbj9U+DAhogr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gustavoalcantara/portfolio_data/blob/main/idhm_presidentes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gustavoalcantara/data-porfolio/blob/main/idhm_presidentes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -46,7 +45,7 @@
       "metadata": {
         "id": "c3JIuRJoZyUu"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,15 +56,28 @@
         "SELECT \n",
         "  a.sigla_partido,\n",
         "  a.id_municipio, \n",
-        "  sum(a.votos) AS total_votos\n",
+        "  sum(a.votos) AS total_votos,\n",
+        "  (sum(a.votos) / SUM(total_votos_municipio.total_votos) * 100) AS percentual_votos\n",
         "FROM \n",
         "  `basedosdados.br_tse_eleicoes.resultados_candidato_municipio` a\n",
         "INNER JOIN `basedosdados.mundo_onu_adh.municipio` b \n",
         "ON a.id_municipio = b.id_municipio\n",
+        "INNER JOIN (\n",
+        "  SELECT \n",
+        "    id_municipio,\n",
+        "    sum(votos) AS total_votos\n",
+        "  FROM \n",
+        "    `basedosdados.br_tse_eleicoes.resultados_candidato_municipio`\n",
+        "  WHERE \n",
+        "    ano = 2018 AND cargo = 'presidente' AND turno = 2 AND sigla_uf = 'SP'\n",
+        "  GROUP BY \n",
+        "    id_municipio\n",
+        ") AS total_votos_municipio\n",
+        "ON a.id_municipio = total_votos_municipio.id_municipio\n",
         "WHERE \n",
         "  a.ano = 2018 AND cargo = 'presidente' AND turno = 2 AND sigla_uf = 'SP'\n",
         "GROUP BY \n",
-        "  sigla_partido, id_municipio\n",
+        "  a.sigla_partido, a.id_municipio\n",
         "'''\n",
         "df = bd.read_sql(query, billing_project_id='teste-projeto-bd')"
       ],
@@ -76,7 +88,7 @@
         "id": "4NGdPKO_aQ4l",
         "outputId": "978b74b1-658a-4059-fac1-54f620dc2b85"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +113,7 @@
       "metadata": {
         "id": "k1Mbmz3IwODC"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +129,7 @@
         "id": "qcWnpb5ewyOp",
         "outputId": "277b30b7-3af1-4f2f-8fe7-81ea74e13b63"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
