--- a/idhm_presidentes.ipynb
+++ b/idhm_presidentes.ipynb
@@ -27,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "hGIZ52IXZXHf"
       },
       "outputs": [],
       "source": [
         "# IN PROGRESS\n",
-        "pip install basedosdados -q"
+        "!pip install basedosdados -q"
       ]
     },
     {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "c3JIuRJoZyUu"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -53,48 +53,49 @@
       "source": [
         "#Lendo/Acessando o df. a partir do SQL e pacote da Base dos Dados para 2018 no 2º Turno\n",
         "query = '''\n",
-        "SELECT \n",
+        "SELECT\n",
         "  a.sigla_partido,\n",
-        "  a.id_municipio, \n",
+        "  a.id_municipio,\n",
         "  sum(a.votos) AS total_votos,\n",
-        "  (sum(a.votos) / SUM(total_votos_municipio.total_votos) * 100) AS percentual_votos\n",
-        "FROM \n",
+        "  (sum(a.votos) / SUM(total_votos_municipio.total_votos) * 100) AS percentual_votos,\n",
+        "  b.idhm,\n",
+        "FROM\n",
         "  `basedosdados.br_tse_eleicoes.resultados_candidato_municipio` a\n",
-        "INNER JOIN `basedosdados.mundo_onu_adh.municipio` b \n",
-        "ON a.id_municipio = b.id_municipio\n",
+        "INNER JOIN `basedosdados.mundo_onu_adh.municipio` b\n",
+        "ON a.id_municipio = b.id_municipio AND b.ano = 2010\n",
         "INNER JOIN (\n",
-        "  SELECT \n",
+        "  SELECT\n",
         "    id_municipio,\n",
         "    sum(votos) AS total_votos\n",
-        "  FROM \n",
+        "  FROM\n",
         "    `basedosdados.br_tse_eleicoes.resultados_candidato_municipio`\n",
-        "  WHERE \n",
+        "  WHERE\n",
         "    ano = 2018 AND cargo = 'presidente' AND turno = 2 AND sigla_uf = 'SP'\n",
-        "  GROUP BY \n",
+        "  GROUP BY\n",
         "    id_municipio\n",
         ") AS total_votos_municipio\n",
         "ON a.id_municipio = total_votos_municipio.id_municipio\n",
-        "WHERE \n",
+        "WHERE\n",
         "  a.ano = 2018 AND cargo = 'presidente' AND turno = 2 AND sigla_uf = 'SP'\n",
-        "GROUP BY \n",
-        "  a.sigla_partido, a.id_municipio\n",
+        "GROUP BY\n",
+        "  a.sigla_partido, a.id_municipio, b.idhm\n",
         "'''\n",
-        "df = bd.read_sql(query, billing_project_id='teste-projeto-bd')"
+        "df = bd.read_sql(query, billing_project_id='meu-billing-id')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4NGdPKO_aQ4l",
-        "outputId": "978b74b1-658a-4059-fac1-54f620dc2b85"
+        "outputId": "348dafd1-b027-49b6-f2cc-4c4f22d353c5"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Downloading: 100%|██████████| 1290/1290 [00:00<00:00, 7633.83rows/s]\n"
+            "Downloading: 100%|██████████| 1290/1290 [00:00<00:00, 8050.69rows/s]\n"
           ]
         }
       ]
@@ -102,57 +103,33 @@
     {
       "cell_type": "code",
       "source": [
-        "#Calculando Porcentagem de votação cada municipio \n",
-        "def calculate_percent(group):\n",
-        "    total_votes = group['total_votos'].sum()\n",
-        "    group['percent'] = group['total_votos'] / total_votes * 100\n",
-        "    return group\n",
-        "\n",
-        "df = df.groupby('id_municipio').apply(calculate_percent)"
-      ],
-      "metadata": {
-        "id": "k1Mbmz3IwODC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df"
+        "df.head()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 206
         },
         "id": "qcWnpb5ewyOp",
-        "outputId": "277b30b7-3af1-4f2f-8fe7-81ea74e13b63"
+        "outputId": "0b0cd4c8-f691-4f65-ee65-6bd34f02f322"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "     sigla_partido id_municipio  total_votos    percent\n",
-              "0               PT      3500105         9468  17.298838\n",
-              "1              PSL      3500105        45264  82.701162\n",
-              "2               PT      3500204         1983   24.46336\n",
-              "3              PSL      3500204         6123   75.53664\n",
-              "4               PT      3500303        13005  28.708609\n",
-              "...            ...          ...          ...        ...\n",
-              "1285           PSL      3557154         3396  71.239773\n",
-              "1286            PT      3557204         5214  27.635554\n",
-              "1287           PSL      3557204        13653  72.364446\n",
-              "1288            PT      3557303         4185  23.031204\n",
-              "1289           PSL      3557303        13986  76.968796\n",
-              "\n",
-              "[1290 rows x 4 columns]"
+              "  sigla_partido id_municipio  total_votos  percentual_votos   idhm\n",
+              "0            PT      3500105         3156         17.298838  0.790\n",
+              "1           PSL      3500105        15088         82.701162  0.790\n",
+              "2            PT      3500204          661         24.463360  0.730\n",
+              "3           PSL      3500204         2041         75.536640  0.730\n",
+              "4            PT      3500303         4335         28.708609  0.715"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-519b1502-bd4d-47b3-a8bc-5ed41aa26863\">\n",
+              "\n",
+              "  <div id=\"df-57178edc-589d-4a13-b2da-a30653e44239\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -175,7 +152,8 @@
               "      <th>sigla_partido</th>\n",
               "      <th>id_municipio</th>\n",
               "      <th>total_votos</th>\n",
-              "      <th>percent</th>\n",
+              "      <th>percentual_votos</th>\n",
+              "      <th>idhm</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -183,95 +161,124 @@
               "      <th>0</th>\n",
               "      <td>PT</td>\n",
               "      <td>3500105</td>\n",
-              "      <td>9468</td>\n",
+              "      <td>3156</td>\n",
               "      <td>17.298838</td>\n",
+              "      <td>0.790</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>PSL</td>\n",
               "      <td>3500105</td>\n",
-              "      <td>45264</td>\n",
+              "      <td>15088</td>\n",
               "      <td>82.701162</td>\n",
+              "      <td>0.790</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>PT</td>\n",
               "      <td>3500204</td>\n",
-              "      <td>1983</td>\n",
-              "      <td>24.46336</td>\n",
+              "      <td>661</td>\n",
+              "      <td>24.463360</td>\n",
+              "      <td>0.730</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>PSL</td>\n",
               "      <td>3500204</td>\n",
-              "      <td>6123</td>\n",
-              "      <td>75.53664</td>\n",
+              "      <td>2041</td>\n",
+              "      <td>75.536640</td>\n",
+              "      <td>0.730</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>PT</td>\n",
               "      <td>3500303</td>\n",
-              "      <td>13005</td>\n",
+              "      <td>4335</td>\n",
               "      <td>28.708609</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1285</th>\n",
-              "      <td>PSL</td>\n",
-              "      <td>3557154</td>\n",
-              "      <td>3396</td>\n",
-              "      <td>71.239773</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1286</th>\n",
-              "      <td>PT</td>\n",
-              "      <td>3557204</td>\n",
-              "      <td>5214</td>\n",
-              "      <td>27.635554</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1287</th>\n",
-              "      <td>PSL</td>\n",
-              "      <td>3557204</td>\n",
-              "      <td>13653</td>\n",
-              "      <td>72.364446</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1288</th>\n",
-              "      <td>PT</td>\n",
-              "      <td>3557303</td>\n",
-              "      <td>4185</td>\n",
-              "      <td>23.031204</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1289</th>\n",
-              "      <td>PSL</td>\n",
-              "      <td>3557303</td>\n",
-              "      <td>13986</td>\n",
-              "      <td>76.968796</td>\n",
+              "      <td>0.715</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>1290 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-519b1502-bd4d-47b3-a8bc-5ed41aa26863')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-57178edc-589d-4a13-b2da-a30653e44239')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
-              "        \n",
+              "\n",
               "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
               "       width=\"24px\">\n",
               "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
               "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
               "  </svg>\n",
               "      </button>\n",
-              "      \n",
-              "  <style>\n",
+              "\n",
+              "\n",
+              "\n",
+              "    <div id=\"df-52b90052-a74d-453b-8547-d3b92c3cdc38\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-52b90052-a74d-453b-8547-d3b92c3cdc38')\"\n",
+              "              title=\"Suggest charts.\"\n",
+              "              style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "      </button>\n",
+              "    </div>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: #E8F0FE;\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: #1967D2;\n",
+              "    height: 32px;\n",
+              "    padding: 0 0 0 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: #E2EBFA;\n",
+              "    box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: #174EA6;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "    background-color: #3B4455;\n",
+              "    fill: #D2E3FC;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart:hover {\n",
+              "    background-color: #434B5C;\n",
+              "    box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "    fill: #FFFFFF;\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "    <script>\n",
+              "      async function quickchart(key) {\n",
+              "        const containerElement = document.querySelector('#' + key);\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      }\n",
+              "    </script>\n",
+              "\n",
+              "      <script>\n",
+              "\n",
+              "function displayQuickchartButton(domScope) {\n",
+              "  let quickchartButtonEl =\n",
+              "    domScope.querySelector('#df-52b90052-a74d-453b-8547-d3b92c3cdc38 button.colab-df-quickchart');\n",
+              "  quickchartButtonEl.style.display =\n",
+              "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "}\n",
+              "\n",
+              "        displayQuickchartButton(document);\n",
+              "      </script>\n",
+              "      <style>\n",
               "    .colab-df-container {\n",
               "      display:flex;\n",
               "      flex-wrap:wrap;\n",
@@ -311,12 +318,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-519b1502-bd4d-47b3-a8bc-5ed41aa26863 button.colab-df-convert');\n",
+              "          document.querySelector('#df-57178edc-589d-4a13-b2da-a30653e44239 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-519b1502-bd4d-47b3-a8bc-5ed41aa26863');\n",
+              "          const element = document.querySelector('#df-57178edc-589d-4a13-b2da-a30653e44239');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -334,12 +341,11 @@
               "        }\n",
               "      </script>\n",
               "    </div>\n",
-              "  </div>\n",
-              "  "
+              "  </div>\n"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     }
